Fix header logo overflow by reducing height to fit header

--- a/style_v8.css
+++ b/style_v8.css
@@ -264,7 +264,7 @@ p, h1, h2, h3, h4, li {
    ヘッダーロゴ拡大
 =========================== */
 .logo-img {
-  height: 70px;
+  height: 48px;
 }
 
 .header-inner {
